cabal-version:      3.0
name:               password-generate-with-seed
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             haruki-nikaidou
build-type:         Simple
extra-doc-files:    README.md

common warnings
    ghc-options: -Wall

executable password-generate-with-seed
    import:           warnings

    main-is:          Main.hs
    other-modules:    Alphabet,
                      ArgParser,
                      Generator,
                      Repeater

    build-depends:    base >=4.5 && <4.21,
                      bytestring,
                      cryptohash-sha256 == 0.11.102.1,
                      optparse-applicative

    hs-source-dirs:   app

    default-language: Haskell2010
